feat: add product details endpoint (product/:id/dashboard & product/:id/chart)
